added first batch of cost modeling

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -38,19 +38,22 @@
 \newacronym{nan}{NaN}{Not a Number}
 \newacronym{nfegs}{NF-EGS}{Near Field EGS}
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
-\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
-\newacronym{nm}{NM}{New Mexico}
-\newacronym{nn}{NN}{Neural Network}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
+\newacronym{npv}{NPV}{Net Present Value}
+\newacronym{nn}{NN}{Neural Network}
+\newacronym{nm}{NM}{New Mexico}
+\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
 \newacronym{ovo}{OvO}{One versus One}
 \newacronym{ovr}{OvR}{One versus Rest}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
 \newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
+\newacronym{ppa}{PPA}{Power Purchase Agreement}
 \newacronym{relu}{ReLU}{Rectified Linear Unit}
 \newacronym{rfe}{RFE}{Recursive Feature Elimination}
 \newacronym{rgr}{RGR}{Rio Grande Rift}
 \newacronym{roc}{ROC}{Receiver Operating Characteristic}
+\newacronym{rps}{RPS}{Renewable Portfolio Standard}
 \newacronym{shap}{SHAP}{Shapley Additive Explanation}
 \newacronym{sigt}{SiGT}{Silica Geothermometer Temperature}
 \newacronym{tn}{TN}{True Negative}
