--- a/templates/appa.tex
+++ b/templates/appa.tex
@@ -1,4 +1,5 @@
-\chapter{Appendix A}
+\chapter{Appendix A}\label{app:a}
 
-\clearpage
-\newpage
+\section{ArcGIS Documentation}
+
+\section{Python Script Documentation}
