--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -59,7 +59,7 @@ The conventional concept of a geothermal system consists of five key entities \c
 
 \subsubsection{Hydrothermal Systems}\label{ch2:hydro}
 If naturally present, the combination of these five elements defines a hydrothermal system. As water percolates down, captures heat from the permeable thermal reservoir, and gets trapped beneath the sealing caprock, a small fraction of the resource can escape to the surface to produce distinctive geothermal manifestations like fumaroles, hot pools, geysers, mud pots, and discolored or altered rocks (Figures \ref{fig:lassen-geysers} and \ref{fig:lassen-mudpot}). These features are strong indicators of hydrothermal resources at depth.
-\begin{figure}[h!]
+\begin{figure}[!ht]
 \centering
 \includegraphics[scale=.84]{Figure-Lassen-geysers3}
 \caption[Terminal Geyser, Lassen National Park]{Terminal Geyser, Lassen National Park, California. Photo credit: Author}
@@ -78,17 +78,24 @@ These few examples show some of the many potential opportunities for low-tempera
 
 The topic of this thesis instead concerns the use of moderate- to high-temperature geothermal for power generation. The first example of geothermal power production came from Italian experiments in 1904, and the first commercial plant went online in Larderello, Italy in 1914 \citep[p.\ 251]{dipippo_geothermal_2012}. Geothermal-generated electricity made its debut in the United States with the development of The Geysers field beginning in 1960 \citep{tester_future_2006}. Hydrothermal plants quickly appeared in New Zealand, Japan, Iceland, Indonesia, Kenya, Philippines and elsewhere throughout the 1970s-1980s, with continued growth through to present-day \citep{lund_characteristics_2007}. 2020 statistics from the \acrlong{irena} (\acrshort{irena}) place the United States as world leader in geothermal installed capacity (2587 MWe), followed by Indonesia (2131 MWe) and Philippines (1928 MWe) \citep{irena_country_2021} (Figure \ref{fig:irena-rank}). 
 
-\begin{figure}[htbp]
+\begin{figure}[!htp]
 \centering
-\includegraphics[scale=.45]{Figure-IRENA_Rankings}
-\caption[Country rankings, installed geothermal capacity ]{Countries ranked by installed geothermal capacity, from \protect\citep{irena_country_2021}}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-IRENA_statistics.pdf}
+\caption[Country rankings, installed geothermal capacity ]{Countries ranked by installed geothermal capacity, adapted from \protect\citep{irena_country_2021}}
 \label{fig:irena-rank}
 \end{figure}
 
 A comprehensive assessment of moderate and high-temperature \acrlong{kgra}s (\acrshort{kgra}s) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S. has conventional geothermal (hydrothermal) power generation potential of $\sim$9,000 MWe, and an additional $\sim$30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are $\sim$8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of $\sim$16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
 
 \subsubsection{Enhanced Geothermal Systems}\label{ch2:egs}
-In some cases, the potential for a geothermal system exists even when one or more of the fundamental elements listed in Section \ref{ch2:sysfund} are missing. These unconventional geothermal systems, often referred to as \acrlong{egs} (\acrshort{egs}), contain a significant heat source but lack either the adequate permeability or sufficient rechargeable working fluids to meet the requirements of a hydrothermal system. A broader definition for EGS includes thermal production from sedimentary and crystalline tight rock, poorly-performing hydrothermal systems, co-production from oil \& gas operations, and even thermal recovery directly from magma \citep{tester_future_2006}. Focusing on the more common tight rock scenario, EGS systems work by artificially creating or improving reservoir permeability and ensuring sustained flow rates of fluids through the reservoir \citep[p.\ 281]{glassley_geothermal_2015}. Fluids pumped down an injection well pass through a stimulated fracture network, heat up through direct contact with the thermal reservoir, and return to the surface via one or more producing wells to serve as inlet fluids for a power plant \textbf{DIAGRAM OF EGS}. Reservoir stimulation generally involves hydraulic fracturing (hydro-fracking or just “fracking”) techniques to create pathways connecting injector-producer pairs. The associated technology and capabilities are thus well-aligned with unconventional oil \& gas operations \citep{petty_synergies_2009}. 
+In some cases, the potential for a geothermal system exists even when one or more of the fundamental elements listed in Section \ref{ch2:sysfund} are missing. These unconventional geothermal systems, often referred to as \acrlong{egs} (\acrshort{egs}), contain a significant heat source but lack either the adequate permeability or sufficient rechargeable working fluids to meet the requirements of a hydrothermal system. A broader definition for EGS includes thermal production from sedimentary and crystalline tight rock, poorly-performing hydrothermal systems, co-production from oil \& gas operations, and even thermal recovery directly from magma \citep{tester_future_2006}. Focusing on the more common tight rock scenario, EGS systems work by artificially creating or improving reservoir permeability and ensuring sustained flow rates of fluids through the reservoir \citep[p.\ 281]{glassley_geothermal_2015}. Fluids pumped down an injection well pass through a stimulated fracture network. Heat from the thermal reservoir warms the fluid before it returns to the surface via one or more producing wells and enters a power plant to produce electricity (Figure \ref{fig:egs_schematic}). Reservoir stimulation generally involves hydraulic fracturing (hydro-fracking or just “fracking”) techniques to create pathways connecting injector-producer pairs. The technology and field capabilities are thus well-aligned with unconventional oil \& gas operations \citep{petty_synergies_2009}. 
+
+\begin{figure}[htp!]
+\centering
+\includegraphics[width=.7\textwidth]{templates/images/Figure-EGS_Schematic.png}
+\caption[EGS schematic]{Schematic diagram illustrating the EGS concept with a single injection-production well pair.}
+\label{fig:egs_schematic}
+\end{figure}
 
 EGS can provide the bridge between geothermal use in niche hydrothermal environments and a more comprehensive adoption of geothermal energy for electricity generation across the United States. The sources of subsurface heat (see Section \ref{ch2:heatorig}) exist everywhere, so accessing a range of temperatures that could support power production relies on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974. Feasibility studies followed soon thereafter in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects that provided key lessons learned are The Geysers (U.S), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, providing $\sim$1,000 MWe for California even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{manish03_united_2009}, rock stimulation experiments in the Northwest Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth to support a 1.5 MW power plant built in 2007-2008 \citep[p.\ 463]{dipippo_geothermal_2012}. In addition to many experimental lessons learned around drilling, hydrofracturing, chemical stimulation, scaling and corrosion, Soultz today supports both electricity production and direct-use district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project in the world, showed great promise after a 6-year proof of concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 due poor stimulation results tied to an unrecognized fault, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
 
@@ -236,7 +243,7 @@ The area of interest (AOI) for the geothermal exploration section of this thesis
 
 \subsubsection{Basin and Range}
 
-Plate tectonic activity along the western edge of the United States transitioned $\sim$30 \acrshort{ma} from subduction of the ancient Farallon plate to the present-day arrangement of transform motion along the San Andreas Fault and subduction of the Juan de Fuca plate off of the Pacific Northwest \citep[p.\ 81]{fowler_solid_2005}. This transition created a broad extensional regime within the southwestern section of the United States and into Mexico, believed to be responsible for the alternating narrow fault-bounded mountain and valley signature of the \acrlong{br} (\acrshort{br}) \citep{henry_real_1992}. The successive north-south striking normal faults level out with depth, creating asymmetric graben structures \citep[p.\ 28-29]{frisch_continental_2011}. Cumulative extension reduced the crust thickness to 30-35 km on average, with associated enhanced volcanism, geothermal gradient, and average heat flow throughout the BR province \citep{lerch_crustal_2007}. (\textbf{FIGURE})
+Plate tectonic activity along the western edge of the United States transitioned $\sim$30 \acrshort{ma} from subduction of the ancient Farallon plate to the present-day arrangement of transform motion along the San Andreas Fault and subduction of the Juan de Fuca plate off of the Pacific Northwest \citep[p.\ 81]{fowler_solid_2005}. This transition created a broad extensional regime within the southwestern section of the United States and into Mexico, believed to be responsible for the alternating narrow fault-bounded mountain and valley signature of the \acrlong{br} (\acrshort{br}) \citep{henry_real_1992}. The successive north-south striking normal faults level out with depth, creating asymmetric graben structures \citep[p.\ 28-29]{frisch_continental_2011}. Cumulative extension reduced the crust thickness to 30-35 km on average, with associated enhanced volcanism, geothermal gradient, and average heat flow throughout the BR province \citep{lerch_crustal_2007}.
 
 \subsubsection{Rio Grande Rift}
 
@@ -250,53 +257,10 @@ The \acrlong{cp} (\acrshort{cp}) province presents a very different geologic pic
 
 On the western side of the AOI is the \acrlong{mdvf} (\acrshort{mdvf}), a 15,000 square mile outpouring of rhyolitic flows as part of a super-eruptive episode in western New Mexico that preceded rifting in the RGR province \citep{keller_rio_1999}. The timing indicates the thermal source for the MDVF magmas likely originated from a Farallon subduction-related event rather than onset of extension, and extrusive activity only represents a fraction of the total magma volume in the underlying composite pluton \citep{olsen_rio_1987,schneider_crustal_1994}. MDVF is just one of several Late Eocene-Oligocene volcanic fields in a chain from Colorado though to central Mexico, and isotopic dating shows a history of four pulses of surface activity beginning 36 Ma near Las Cruces, NM and ending conclusively 24 Ma after a general westward migration \citep{mcintosh_time-stratigraphic_1992}. Lack of consistent trends in current heat flow measurements across the field match the heterogeneous distribution of volcanic features and extrusive volumes \citep{mcintosh_time-stratigraphic_1992}, although some evidence suggests greater water availability and geothermometry measurements make MDVF worth considering for geothermal exploration \citep{pepin_new_2018}.
 
-\subsection{Lightning Dock}
+\subsection{Lightning Dock} \label{ch2:lightning_dock}
 
 \subsubsection{Animas Valley}
 
 \subsubsection{Power Plant}
 
-
-
-%% EXAMPLES %%
-
-%section~\ref{ch1:sec}.
-
-%\footnote{Here is a sample footnote referencing figures~\ref{arm:fig1}
-%and~\ref{arm:fig2}.}  
-
-% This is an example of how you would use tgrind to include an example
-% of source code; it is commented out in this template since the code
-% example file does not exist. To use it, you need to remove the '%' on the
-% beginning of the line, and insert your own information in the call.
-%
-%\tagrind[htbp]{code/pmn.s.tex}{Code sample}{opt:pmn}
-
-%\subsection{Subsection with list}
-%\begin{enumerate}
-%  \item Item 1.
-%  \item Item 2.
-%  \item Item 3.
-%\end{enumerate}
-
-%This is done by using some combination of
-%\begin{eqnarray*}
-%a_i & = & a_j + a_k \\
-%a_i & = & 2a_j + a_k \\
-%a_i & = & 4a_j + a_k \\
-%a_i & = & 8a_j + a_k \\
-%a_i & = & a_j - a_k \\
-%a_i & = & a_j \ll m \mbox{shift}
-%\end{eqnarray*}
-
-%instead of the multiplication.  For example, you could use:
-%\begin{eqnarray*}
-%r & = & 4s + s\\
-%r & = & r + r
-%\end{eqnarray*}
-%Or by xx:
-%\begin{eqnarray*}
-%t & = & 2s + s \\
-%r & = & 2t + s \\
-%r & = & 8r + t
-%\end{eqnarray*}
+The plant currently operates using a single-turbine binary cycle design with isobutane working fluid and air-cooled condenser \citep{altieri_overview_2017}. Produced hydrothermal brine enters the system at 155 $^\circ$C at a flow rate of 235 kg/s, and fluid outflow is reinjected at a temperature of $\approx 55^\circ$C \citep{bonafin_repowering_2019}.
