--- a/templates/main.tex
+++ b/templates/main.tex
@@ -19,7 +19,7 @@
 %%  If you want your thesis copyright to you instead of MIT, use the
 %%  ``vi'' option, as above.
 %%
-\documentclass[%draft,
+\documentclass[draft,
 12pt,vi,twoside,leftblank]{mitthesis}
 %%
 %% If you want blank pages before new chapters to be labelled ``This
@@ -146,14 +146,14 @@
 \include{chap1}
 \include{chap2}
 \include{chap3}
-%\include{chap4}
+\include{chap4}
 \include{chap5}
-%\include{chap6}
-%\include{chap7}
-%\include{chap8}
-%\include{chap9}
-%\appendix
-%\include{appa}
+\include{chap6}
+\include{chap7}
+\include{chap8}
+\include{chap9}
+\appendix
+\include{appa}
 %\include{appb}
 \include{biblio}
 \end{document}
