--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,90 @@
 
+@article{fawcett_introduction_2006,
+	title = {An introduction to {ROC} analysis},
+	volume = {27},
+	issn = {01678655},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S016786550500303X},
+	doi = {10.1016/j.patrec.2005.10.010},
+	abstract = {Receiver operating characteristics (ROC) graphs are useful for organizing classiﬁers and visualizing their performance. ROC graphs are commonly used in medical decision making, and in recent years have been used increasingly in machine learning and data mining research. Although ROC graphs are apparently simple, there are some common misconceptions and pitfalls when using them in practice. The purpose of this article is to serve as an introduction to ROC graphs and as a guide for using them in research.},
+	language = {en},
+	number = {8},
+	urldate = {2021-06-22},
+	journal = {Pattern Recognition Letters},
+	author = {Fawcett, Tom},
+	month = jun,
+	year = {2006},
+	pages = {861--874},
+}
+
+@misc{eia_new_2021,
+	title = {New {Mexico} - {State} {Energy} {Profile} {Overview}},
+	url = {https://www.eia.gov/state/index.php?sid=NM},
+	urldate = {2021-07-08},
+	journal = {U.S. Energy Information Administration (EIA)},
+	author = {{EIA}},
+	month = jul,
+	year = {2021},
+	note = {U.S. Energy Information Administration (EIA)},
+}
+
+@techreport{doughty_geovision_2018,
+	title = {{GeoVision} {Analysis}: {Exploration} {Task} {Force} {Report}},
+	url = {https://doi.org/10.2172/1457012},
+	institution = {Lawrence Berkeley National Lab.(LBNL), Berkeley, CA (United States)},
+	author = {Doughty, Christine and Dobson, Patrick F and Wall, Anna and McLing, Travis and Weiss, Chester},
+	year = {2018},
+}
+
+@unpublished{malone_development_2004,
+	title = {Development of {Risk} {Assessment} {Matrix} for {NASA} {Engineering} and {Safety} {Center}},
+	url = {https://ntrs.nasa.gov/citations/20050123548},
+	abstract = {This paper describes a study, which had as its principal goal the development of a sufficiently detailed 5 x 5 Risk Matrix Scorecard. The purpose of this scorecard is to outline the criteria by which technical issues can be qualitatively and initially prioritized. The tool using this score card has been proposed to be one of the information resources the NASA Engineering and Safety Center (NESC) takes into consideration when making decisions with respect to incoming information on safety concerns across the entire NASA agency. The contents of this paper discuss in detail each element of the risk matrix scorecard, definitions for those elements and the rationale behind the development of those definitions. This scorecard development was performed in parallel with the tailoring of the existing Futron Corporation Integrated Risk Management Application (IRMA) software tool. IRMA was tailored to fit NESC needs for evaluating incoming safety concerns and was renamed NESC Assessment Risk Management Application (NAFMA) which is still in developmental phase.},
+	urldate = {2021-07-07},
+	author = {Malone, Roy W. and Moses, Kelly},
+	month = jan,
+	year = {2004},
+	note = {NTRS Author Affiliations: NASA Marshall Space Flight Center, Futron Corp.
+NTRS Meeting Information: Risk Analysis: The Profession and the Future; 2004-12-05 to 2004-12-08; undefined
+NTRS Document ID: 20050123548
+NTRS Research Center: Marshall Space Flight Center (MSFC)},
+	keywords = {Documentation and Information Science},
+}
+
+@inproceedings{melosh_geothermal_2017,
+	title = {Geothermal probability of success and conceptual well design},
+	author = {Melosh, Glenn},
+	year = {2017},
+	pages = {13--15},
+}
+
+@techreport{blankenship_drilling_2016,
+	title = {Drilling {Challenges} in {Geothermal} {Reservoirs}.},
+	institution = {Sandia National Lab.(SNL-NM), Albuquerque, NM (United States)},
+	author = {Blankenship, Douglas A},
+	year = {2016},
+}
+
+@article{lowry_geovision_nodate,
+	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Reservoir} {Maintenance} and {Development}},
+	abstract = {This report documents the key findings from the Reservoir Maintenance and Development (RM\&D) Task of the U.S. Department of Energy’s (DOE), Geothermal Technologies Office (GTO) Geothermal Vision Study (GeoVision Study). The GeoVision Study had the objective of conducting analyses of future geothermal growth based on sets of current and future geothermal technology developments. The RM\&D Task is one of seven tasks within the GeoVision Study with the others being, Exploration and Confirmation, Potential to Penetration, Institutional Market Barriers, Environmental and Social Impacts, Thermal Applications, and Hybrid Systems. The full set of findings and the details of the GeoVision Study can be found in the final GeoVision Study report on the DOE-GTO website. As applied here, RM\&D refers to the activities associated with developing, exploiting, and maintaining a known geothermal resource. It assumes that the site has already been vetted and that the resource has been evaluated to be of sufficient quality to move towards full-scale development. It also assumes that the resource is to be developed for power generation, as opposed to low-temperature or direct use applications. This document presents the key factors influencing RM\&D from both a technological and operational standpoint and provides a baseline of its current state. It also looks forward to describe areas of research and development that must be pursued if the development geothermal energy is to reach its full potential.},
+	language = {en},
+	author = {Lowry, Thomas S and Finger, John T and Carrigan, Charles R and Foris, Adam and Kennedy, Mack B and Corbet, Thomas F and Doughty, Christine A and Pye, Stephen and Sonnenthal, Eric L},
+	pages = {80},
+}
+
+@techreport{young_georeport_2019,
+	title = {{GeoRePORT} {Protocol} {Volume} {II}: {Geological} {Assessment} {Tool}},
+	institution = {National Renewable Energy Lab.(NREL), Golden, CO (United States)},
+	author = {Young, Katherine R and Wall, Anna M and Badgett, Alex and Dobson, Patrick F},
+	year = {2019},
+}
+
+@inproceedings{weathers_geothermal_2015,
+	title = {Geothermal play fairway projects initiated by the {US} {Department} of {Energy}},
+	author = {Weathers, Michael and Hass, Eric and Thomas, Holly and Ziegenbein, Mark and Prisjatschew, Alexandra and Garchar, Laura and Segneri, Brittany and Emmons, Sara},
+	year = {2015},
+}
+
 @incollection{efron_bootstrap_1992,
 	address = {New York, NY},
 	series = {Springer {Series} in {Statistics}},
@@ -454,35 +540,6 @@ Volume: 2021},
 	author = {Tharwat, Alaa},
 	year = {2020},
 	note = {Publisher: Emerald Publishing Limited},
-}
-
-@article{fawcett_introduction_2006,
-	title = {An introduction to {ROC} analysis},
-	volume = {27},
-	issn = {0167-8655},
-	number = {8},
-	journal = {Pattern recognition letters},
-	author = {Fawcett, Tom},
-	year = {2006},
-	note = {Publisher: Elsevier},
-	pages = {861--874},
-}
-
-@article{fawcett_introduction_2006-1,
-	title = {An introduction to {ROC} analysis},
-	volume = {27},
-	issn = {01678655},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S016786550500303X},
-	doi = {10.1016/j.patrec.2005.10.010},
-	abstract = {Receiver operating characteristics (ROC) graphs are useful for organizing classiﬁers and visualizing their performance. ROC graphs are commonly used in medical decision making, and in recent years have been used increasingly in machine learning and data mining research. Although ROC graphs are apparently simple, there are some common misconceptions and pitfalls when using them in practice. The purpose of this article is to serve as an introduction to ROC graphs and as a guide for using them in research.},
-	language = {en},
-	number = {8},
-	urldate = {2021-06-22},
-	journal = {Pattern Recognition Letters},
-	author = {Fawcett, Tom},
-	month = jun,
-	year = {2006},
-	pages = {861--874},
 }
 
 @misc{scikit-learn_common_2021,
@@ -1596,18 +1653,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	pages = {791--800},
 }
 
-@article{doughty_geovision_2018,
-	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Exploration}},
-	shorttitle = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}},
-	url = {https://escholarship.org/uc/item/4v7054cw},
-	abstract = {Author(s): Doughty, C; Dobson, PF; Wall, A; McLing, T; Weiss, C},
-	language = {en},
-	urldate = {2021-04-19},
-	author = {Doughty, C. and Dobson, P. F. and Wall, A. and McLing, T. and Weiss, C.},
-	month = jun,
-	year = {2018},
-}
-
 @techreport{bielicki_hydrogeolgic_2015,
 	address = {Los Alamos, NM},
 	title = {Hydrogeolgic windows: {Regional} signature detection for blind and traditional geothermal play fairways, {Final} {Reports}, {Los} {Alamos} {National} {Laboratory}},
@@ -2547,14 +2592,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 
 @book{de_neufville_flexibility_2011,
 	title = {Flexibility in engineering design},
-	isbn = {0-262-29733-7},
-	publisher = {MIT Press},
-	author = {de Neufville, Richard and Scholtes, Stefan},
-	year = {2011},
-}
-
-@book{de_neufville_flexibility_2011-1,
-	title = {Flexibility in engineering design},
 	isbn = {0-262-01623-0},
 	publisher = {MIT Press},
 	author = {de Neufville, Richard and Scholtes, Stefan},
@@ -2888,17 +2925,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	title = {Geology and geothermal waters of {Lightning} {Dock} region, {Animas} {Valley} and {Pyramid} {Mountains}, {Hidalgo} {County}, {New} {Mexico} {\textbar} {Open} {Energy} {Information}},
 	url = {https://openei.org/wiki/Geology_and_geothermal_waters_of_Lightning_Dock_region,_Animas_Valley_and_Pyramid_Mountains,_Hidalgo_County,_New_Mexico},
 	urldate = {2021-04-14},
-}
-
-@techreport{schochet_development_2001-1,
-	title = {Development of a {Plan} to {Implement} {Enhanced} {Geothermal} {Systems} ({EGS}) in the {Animas} {Valley}, {New} {Mexico} - {Final} {Report} - 07/26/2000 - 02/01/2001; {FINAL}},
-	url = {http://inis.iaea.org/Search/search.aspx?orig_q=RN:33052100},
-	language = {English},
-	number = {DOE/ID--13989},
-	urldate = {2021-04-13},
-	institution = {ORMAT International},
-	author = {Schochet, Daniel N. and Cunniff, Roy A.},
-	year = {2001},
 }
 
 @article{kintzinger_geothermal_1956,
@@ -4782,10 +4808,4 @@ Publisher: American Psychological Association},
 @misc{noauthor_altarock_nodate,
 	title = {{AltaRock} {Energy} {\textbar} arpa-e.energy.gov},
 	url = {https://arpa-e.energy.gov/technologies/projects/millimeter-wave-technology-demonstration-geothermal-direct-energy-drilling},
-}
-
-@misc{bram_ktb_1995,
-	title = {The {KTB} {Borehole}-{Germany}'s superdeep telescope into the {Earth}'s crust},
-	author = {Bram, Kurt and Draxler, Johann and Hirschmann, Gottfried and Zoth, Gustav and Hiron, Stephane and Kühr, Miel},
-	year = {1995},
 }
