some cleanup of intro for chapter 4

--- a/templates/chap4.tex
+++ b/templates/chap4.tex
@@ -19,11 +19,13 @@ Department of Energy-funded efforts to characterize the geothermal resources in 
 
 As suggested by this list, the conditions at Lightning Dock offer a nearly ideal test case for an EGS proof of concept on a manageable scale. Historical land utilization in the area is primarily agricultural with few residences, so risk is low for any adverse impact on an existing population. In addition, use of a binary cycle design as proposed by \citet{schochet_development_2001} offers the potential for power production with zero GHG emissions.  
 
-In this thesis, the \citeauthor{schochet_development_2001} concept is revisited with the existing geothermal production at Lightning Dock kept in mind; rather than building a new hybrid facility, the revised concept involves targeting the deeper reservoir as a near-hydrothermal field EGS (NF-EGS) development with a tie-back to the current Lightning Dock facility. Stepping out from the hydrothermal zone in proximity to the Animas Valley Fault complex, thermal conditions settle to a high background geothermal gradient between $\approx$ 80-120 K/km based on boreholes TG 56-14 and TG 12-7 \citep{cunniff_final_2003} -- certainly high enough to support geothermal capture. These conditions make for an interesting case study on risk mitigation options for geothermal production planning.
+In this thesis, the \citeauthor{schochet_development_2001} concept is revisited with the existing geothermal production at Lightning Dock kept in mind; rather than building a new hybrid facility, the revised concept involves targeting the deeper reservoir as a near-hydrothermal field EGS (NF-EGS) development with a tie-back to the current Lightning Dock facility. Stepping out from the hydrothermal zone in proximity to the Animas Valley Fault complex, thermal conditions settle to a high background geothermal gradient between $\approx$ 80-120 K/km based on boreholes TG 56-14 and TG 12-7 \citep{cunniff_final_2003} -- certainly high enough to support geothermal capture. These conditions make for an interesting case study on risk mitigation options for EGS production planning.
+
+Public records regarding power generation at Lightning Dock provide some guidance on the appropriate size for an EGS expansion. After phase 1 development, the plant produced 4 MW. An additional 6 MW was slated for phase 2, but re-powering of the plant actually added 7 MW to the capacity after several years of development stasis \citep{think_geoenergy_turboden_2020}. \citeauthor{schochet_development_2001} originally proposed a 6 MW hybrid plant for the site, but they also noted 6 MW from the Horquilla was likely understating the full reservoir potential \citeyear{schochet_development_2001}. In consideration of the step-wise trajectory of plant improvements and assessment of available thermal resource, this case study targets 5 MW as a expansion goal. 
 
 \subsection{New Mexico Electricity Demand}
 Pursuing the expansion of a power plant requires sufficient demand to ensure total revenue offsets project expenses. Fortunately, New Mexico regulations support the further development of geothermal power production in the state. Specifically, the Energy Transition Act signed in 2019 updated the New Mexico \acrlong{rps} (\acrshort{rps}) to go zero-carbon by 2050, with milestone targets along the way \citep{lillian_new_2019}. The RPS dates back to the Renewable Energy Act passed in 2004 and comes with several carve-outs, including a 30\% requirement for wind energy, 20\% for solar, and 5\% for other renewables like geothermal \citep{dsire_dsire_2021}. Public Service Company of New Mexico (PNM) is the state’s largest energy provider and services the Lordsburg area where Lightning Dock is located. PNM and Cyrq Energy currently share a 20-year \acrlong{ppa} (\acrshort{ppa}) for electricity generated at Lightning Dock. The PPA has gone through amendments over time to update both the wattage supplied to PNM and the pricing structure per MWh \citep[e.g.,][]{pnm_pnm_2014,stanfield_new_2017}. This indicates a PPA can be revisited if conditions change, which is an important aspect to consider when modeling project financials. 
-In addition to the RPS requirement for a diversified renewables portfolio, coal power plants across the state face mandated shut-downs as a consequence off the Energy Transition Act. Coal currently supplies a large fraction of energy consumed by New Mexico customers (Figure \ref{fig:nm_energy_consumption}). Geothermal-derived electricity can help fill the supply gap with no-emissions clean energy as coal-based production ramps down to zero.
+In addition to the RPS requirement for a diversified renewables portfolio, coal power plants across the state face mandated shut-downs as a consequence off the Energy Transition Act. Coal currently supplies a large fraction ($\approx$ 45\%) of electric power sector consumption in New Mexico (Figure \ref{fig:nm_energy_consumption}). The supply gap introduced as coal-based production ramps down to zero could more than compensate for a 5 MW addition of no-emissions energy to the New Mexico grid.
 
 \begin{figure}[!htp]
 \centering
@@ -34,9 +36,7 @@ In addition to the RPS requirement for a diversified renewables portfolio, coal 
 
 \subsection{Modular Geothermal}
 
-Public records regarding power generation at Lightning Dock provide some guidance on the appropriate size for an EGS expansion. The recent re-powering of the plant increased production by 7 MW to 11 MW after several years of development stasis \citep{think_geoenergy_turboden_2020}. Interestingly, PNM notes on their website that Lightning Dock capacity actually 15 MW \citep{pnm_geothermal_2021}, $\approx$4 MW higher than true net capacity. \citeauthor{schochet_development_2001} proposed a 6 MW hybrid plant but noted 6 MW just from the Horquilla as highly probable, if not understating true reservoir potential \citeyear{schochet_development_2001}. Each of these observations refers to increments of $\approx$5 MW, so this case study considers an expansion of this size for modeling.
-
-While limiting this expansion to a single 5 MW facility defines one design alternative, others exist as well. Innovations in modular power plant technology have recently captured the attention of high-stakes investors across the world (Shieber, 2019). Climeon, for example, has engineered a compact binary cycle unit capable of 150 kW of generated electricity using inlet fluid temperatures rated up to 120℃ and flow rates of up to 35 kg/s \citep{climeon_climeon_2021}. These units can be combined into a larger deployable Power Block for 1050 kW of generated electricity (Winther, 2018) (Figure 4). Power plants can thus now be designed as a combination of multi-unit assemblages, deployable all at once or over an extended period of time (Figure 5) (Climeon, 2018)
+Limiting this expansion to a single 5 MW facility defines one design alternative, but others exist as well. One flexible option uses modular power plant technology that has recently captured the attention of high-stakes investors across the world (Shieber, 2019). Climeon, for example, has engineered a compact binary cycle unit capable of 150 kW of generated electricity using inlet fluid temperatures rated up to 120℃ and flow rates of up to 35 kg/s \citep{climeon_climeon_2021}. These units can be combined into a larger deployable Power Block for 1050 kW of generated electricity \citep{winther_power_2018} (Figure 4). Power plants can now be treated like multi-unit assemblages, installed all at once or over an extended period of time based on operator needs (Figure 5) (Climeon, 2018)
 
 
 
