--- a/templates/main.tex
+++ b/templates/main.tex
@@ -19,7 +19,7 @@
 %%  If you want your thesis copyright to you instead of MIT, use the
 %%  ``vi'' option, as above.
 %%
-\documentclass[draft,
+\documentclass[%draft,
 12pt,vi,twoside,leftblank]{mitthesis}
 %%
 %% If you want blank pages before new chapters to be labelled ``This
